EKS-k8s-on-modules/test-deployments/1-test-cluster_autoscaler.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: autoscaler-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-1
  namespace: autoscaler-namespace
spec:
  replicas: 10
  selector:
    matchLabels:
      app: test-app-1
  template:
    metadata:
      labels:
        app: test-app-1
    spec:
      containers:
        - name: test-app-1
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 250m
