EKS-k8s-on-modules/test-deployments/2-test-hpa-autoscaler.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hpa-test-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-2
  namespace: hpa-test-namespace
spec:
  selector:
    matchLabels:
      app: test-app-2
  template:
    metadata:
      labels:
        app: test-app-2
    spec:
      containers:
        - name: test-app-2
          image: polinux/stress:1.0.4
          command: ["stress"]
          args: ["--cpu", "1", "--vm-bytes", "100M", "--vm-hang", "1"]
          ports:
           - containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 250m
