EKS-k8s-on-modules/test-deployments/9-test-efs-TODO.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: efs-example
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-1
  namespace: efs-example
spec:
  containers:
    - name: myapp-1
      image: busybox
      command: ["/bin/sh"]
      args:
        [
          "-c",
          "while true; do echo $(date -u) >> /data/out1.txt; sleep 5; done",
        ]
      volumeMounts:
        - name: persistent-storage
          mountPath: /data
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: myapp
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-2
  namespace: efs-example
spec:
  containers:
    - name: myapp-2
      image: busybox
      command: ["/bin/sh"]
      args:
        [
          "-c",
          "while true; do echo $(date -u) >> /data/out1.txt; sleep 5; done",
        ]
      volumeMounts:
        - name: persistent-storage
          mountPath: /data
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: myapp
