EKS-k8s-on-modules/test-deployments/4-test-alb-with-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-lb-with-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-4
  namespace: aws-lb-with-ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app-4
  template:
    metadata:
      labels:
        app: test-app-4
    spec:
      containers:
        - name: test-app-4
          image: cloudnativelabs/whats-my-ip
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 64Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-4
  namespace: aws-lb-with-ingress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: test-app-4
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.8/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-4
  namespace: aws-lb-with-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: web1.lingerie.by # change this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-4
                port:
                  number: 80
