EKS-k8s-on-modules/test-deployments/5-test-alb-with-ingress-and-SSL.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ssl-example-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-5
  namespace: ssl-example-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app-5
  template:
    metadata:
      labels:
        app: test-app-5
    spec:
      containers:
        - name: test-app-5
          image: cloudnativelabs/whats-my-ip
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 64Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-5
  namespace: ssl-example-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: test-app-5
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.8/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-5
  namespace: ssl-example-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.8/guide/tasks/ssl_redirect/
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:590183659634:certificate/cb6ae5d7-cda8-4779-b079-218c5f700baa
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: web2.lingerie.by # change this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-5
                port:
                  number: 80
