EKS-k8s-on-modules/test-deployments/6-test-nginx-ingress-without-cert-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-app-without-ssl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-6
  namespace: nginx-ingress-app-without-ssl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app-6
  template:
    metadata:
      labels:
        app: test-app-6
    spec:
      containers:
        - name: test-app-6
          image: cloudnativelabs/whats-my-ip
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 64Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-6
  namespace: nginx-ingress-app-without-ssl
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: test-app-6
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-6
  namespace: nginx-ingress-app-without-ssl
spec:
  ingressClassName: external-nginx
  rules:
    - host: web3.lingerie.by
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-6
                port:
                  number: 80
